--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,16 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
-        "symfony/framework-bundle": "~2.7|~3.0|^4.0|^5.0|^6.0",
-        "symfony/translation": "~2.7|~3.0|^4.0|^5.0|^6.0"
+        "php": ">=8.0",
+        "doctrine/doctrine-bundle": "^2.8",
+        "doctrine/orm": "^2.14",
+        "symfony/console": "^5.4|^6.0",
+        "symfony/framework-bundle": "^5.4|^6.0",
+        "symfony/translation": "^5.4|^6.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "~2.7|~3.0|^4.0|^5.0|^6.0",
-        "phpunit/phpunit": "8.5.*"
+        "symfony/phpunit-bridge": "^5.4|^6.0",
+        "phpunit/phpunit": "^8.5|^9.5"
     },
     "autoload":     {
         "psr-4": { "Lexik\\Bundle\\MaintenanceBundle\\": "" }
